Fix acknowledgment section: Remove co-author reference per reviewer feedback

--- a/paper.tex
+++ b/paper.tex
@@ -870,7 +870,7 @@ Future research may focus on enhancing interpretability, refining reward functio
 
 
 \begin{acks}
-I would like to thank my advisor, Yuri Lawryshyn, for his valuable guidance and direction throughout this work. I also extend my gratitude to Adam Obeng, Bee-Chung Chen, and Jay Adams for their critical coaching and insights, which have significantly shaped my approach and understanding of industry practices. Their expertise has been key in aligning academic research with practical applications.
+I would like to thank Adam Obeng, Bee-Chung Chen, and Jay Adams for their valuable guidance, critical coaching, and insights, which have significantly shaped my approach and understanding of industry practices. Their expertise has been instrumental in aligning academic research with practical applications.
 \end{acks}
 
 % This unnumbered section should be blank when submitting your paper. After review, you may include lists of people and organizations who supported the work.
