Update introduction with unifying framework and contributions

--- a/paper.tex
+++ b/paper.tex
@@ -76,15 +76,17 @@ Over the past decade, deep learning has emerged as a promising technique that en
 
 	% 4.	How does Reinforcement Learning (RL) offer a promising solution to these challenges?
 
-To overcome the challenges of optimizing based solely on immediate objectives, Reinforcement Learning (RL), modeled as a Markov Decision Process (MDP), has emerged as a promising framework \cite{afsar2022reinforcement}. RL enables the consideration of long-term value by optimizing policies that maximize cumulative rewards over time, rather than focusing on short-term engagement metrics. In an MDP, actions are selected based on a policy ($\pi$), which chooses the action that maximizes the expected cumulative reward from the current state onward. This cumulative reward is typically conceptualized as the expected sum of future rewards, discounted over time using a discount factor. A lower discount factor places more emphasis on immediate rewards, effectively ignoring future outcomes. Conversely, a discount factor approaching one values future rewards more heavily, encouraging the policy to consider long-term benefits \cite{Sutton1998}. \\
+To address the limitations of short-term optimization, many large-scale platforms have explored reinforcement learning (RL) as a framework for long-horizon decision making \cite{afsar2022reinforcement}. RL models recommendation as a sequential process in which system actions influence both immediate outcomes and future user behavior. This perspective allows platforms to explicitly reason about trade-offs between short-term monetization and long-term user value.\\
 
-In the context of recommendation systems, rewards can be defined to capture both user engagement and revenue objectives. Engagement rewards might include metrics such as time spent on the platform, content views, clicks, saves, shares, or likes \cite{wang2022surrogate}. Revenue rewards can be tied to ad-related metrics like ad impressions, ad clicks, conversions, or purchases resulting from ad exposure. These different rewards are often combined into a single utility function that reflects the platform’s overall objectives \cite{zhao2020jointly} \cite{zou2019reinforcement} \cite{xu2023optimizing}.\\
+In the context of recommendation systems, rewards can be defined to capture both user engagement and revenue objectives. Engagement rewards might include metrics such as time spent on the platform, content views, clicks, saves, shares, or likes \cite{wang2022surrogate}. Revenue rewards can be tied to ad-related metrics like ad impressions, ad clicks, conversions, or purchases resulting from ad exposure. \\
 
-For example, the reward function  $r_t$  at time  $t$  can be defined as:
+These different rewards are often combined into a single utility function that reflects the platform's overall objectives \cite{zhao2020jointly} \cite{zou2019reinforcement} \cite{xu2023optimizing}.\\
+
+A common formulation expresses the reward at time $t$ as a weighted combination of engagement and revenue components:
 
 $$
-r_t = \alpha \times \text{Engagement Metric}_t + \beta \times \text{Revenue Metric}_t,
-$$ where  $\alpha$  and  $\beta$  are weighting factors that balance the importance of user engagement and monetization. By appropriately defining the utility function and choosing suitable weights, RL algorithms can optimize policies that enhance user experience while maximizing revenue over the long term \cite{zhao2020jointly, zhao2021dear, yan2020ads, sagtani2024ad}. \\
+r_t = \alpha \cdot \text{Engagement}_t + \beta \cdot \text{Revenue}_t,
+$$ where the weights reflect the platform's strategic trade-offs between user experience and monetization. Variants of this linear or non-linear utility formulation appear across a wide range of industrial systems and serve as the basis for many RL-based ranking and ad-allocation policies. Throughout this survey, we use this utility-based perspective to compare how different systems define rewards, constraints, and long-term objectives.\\
 
 
 % What specific challenges are encountered when implementing RL in large-scale recommendation systems?
@@ -96,10 +98,16 @@ Second, designing appropriate reward functions is critical, as poorly chosen rew
 Furthermore, interpretability is a major challenge in RL deployment. Understanding the learned policies--the strategies adopted by the RL agent--can be particularly difficult when policies are updated in real-time during user interactions (online policy learning) \cite{glanois2024survey} \cite{vouros2022explainable} \cite{dulac2019challenges}. In extreme cases, this lack of transparency could result in non-compliant or unethical behavior, posing significant risks to both users and the business \cite{lambert2023entangled}.\\
 
 	% 7.	What are the objectives and contributions of this paper?
-In light of the challenges outlined above, this paper surveys methodologies used to implement RL for large-scale recommendation systems, with a particular focus on contexts where ad revenue is central to the business model. Although previous surveys address RL in recommendation systems \cite{lin2023survey, afsar2022reinforcement}, they do not specifically explore the \textbf{joint optimization of ads and organic content.} This paper addresses this limitation by reviewing approaches that move beyond traditional, myopic ad selection (which can compromise long-term user retention) to analyze how RL agents can jointly weigh immediate revenue against long-term engagement."
-\\
+In light of the challenges outlined above, this paper introduces a unifying framework to implement RL for large-scale recommendation systems, with a particular focus on systems where recommendation decisions have direct monetization implications, such as advertising, sponsored ranking, and marketplace platforms. Although previous surveys address RL in recommendation systems \cite{lin2023survey, afsar2022reinforcement}, they do not specifically explore the \textbf{joint optimization of ads and organic content.} This paper addresses this limitation by reviewing approaches that move beyond traditional, myopic ad selection (which can compromise long-term user retention) to analyze how RL agents can jointly weigh immediate revenue against long-term engagement.\\
 
-The paper begins with a historical overview of ad selection and ranking systems, tracing the evolution from simple rule-based models and heuristic approaches to tree-based models and modern deep learning techniques. Each of these stages is explored in detail, highlighting their limitations and the motivations for adopting RL as the next paradigm in recommendation systems. Following this contextual history and motivation, the paper introduces key RL components such as the action space, state space, reward functions, and policies, using a straightforward toy example: the frozen lake problem. This example provides a foundation for understanding RL fundamentals, which are then mapped to real-world challenges in online advertising and recommendation systems. Drawing on these analogies, the paper offers a clear and practical framework to help practitioners navigate the implementation of RL and adapt these methodologies to their specific needs.
+This survey makes three main contributions.
+First, it introduces a unifying decision-theoretic taxonomy for monetization-aware recommender systems based on the core components of a Markov Decision Process: state, action, reward, and policy.
+Second, it synthesizes over 150 academic and industrial works, organizing them according to how they operationalize these components in practice.
+Third, it identifies common design patterns and open challenges in long-horizon optimization, reward design, and large-scale policy learning.\\
+
+The paper begins with a historical overview of ad selection and ranking systems, tracing the evolution from simple rule-based models and heuristic approaches to tree-based models and modern deep learning techniques. Each of these stages is explored in detail, highlighting their limitations and the motivations for adopting RL as the next paradigm in recommendation systems. Following this contextual history and motivation, the paper introduces key RL components such as the action space, state space, reward functions, and policies. Rather than organizing prior work chronologically or by specific algorithms, this survey adopts the core components of a Markov Decision Process (state, action, reward, and policy) as a unifying taxonomy. We use a minimal RL environment, the FrozenLake problem, as a conceptual scaffold to illustrate these components. The goal is not to teach reinforcement learning, but to provide a consistent abstraction that allows us to systematically compare how monetization-aware recommender systems operationalize each component in practice.
+
+The remainder of the paper is organized according to this taxonomy. We first describe the evolution of monetization-aware ranking systems, and then survey prior work by examining how different approaches define the action space, state representation, reward structure, and policy learning mechanisms.
 
 
 	% 8.	How will this paper help practitioners and researchers navigate the challenges of implementing RL in recommendation systems?
