--- a/paper.tex
+++ b/paper.tex
@@ -72,14 +72,24 @@ Our analysis suggests that RL-inspired techniques like contextual bandits, offli
 
 Platforms such as Google, Meta, TikTok, and Pinterest offer content recommendation systems whose revenue models depend on an effective balance between advertisements and organic content \cite{zhao2020jointly} \cite{danescu2010competing}. This balance is essential to maximize immediate revenue while avoiding long-term issues such as ad fatigue, where users become less responsive to ads due to overexposure, and user churn, where users discontinue using the platform \cite{sagtani2023quantifying} \cite{silberstein2023combating}.\\
 
-Over the past decade, deep learning has emerged as a promising technique that enables recommendation engines to better understand context through embeddings, significantly improving their ability to personalize content \cite{naumov2019deep} \cite{zhao2024survey}. However, deep learning approaches are often supervised and rely on measurable and observable short-term metrics used as model labels, such as the probability of a click-through or the likelihood of a video being watched in full \cite{nvidia_recommender_systems_2021}. Methodologies that use myopic objective functions to optimize these directly measurable short-term metrics often overlook the long-term value of a recommendation \cite{mazoure2021improving}. By focusing on immediate rewards, they may rank content based on short-term engagement metrics while neglecting the entire sequence of user interactions that involve delayed responses. Such approaches can result in suboptimal outcomes, such as promoting clickbait content that compromises long-term revenue and user engagement.\\
+Over the past decade, deep learning has emerged as a promising technique that enables recommendation engines to better understand context through embeddings, significantly improving their ability to personalize content \cite{naumov2019deep} \cite{zhao2024survey}. However, deep learning approaches often rely on Supervised Learning (SL) with measurable and observable short-term metrics used as model labels, such as the probability of a click-through or the likelihood of a video being watched in full \cite{nvidia_recommender_systems_2021}. Methodologies that use myopic objective functions to optimize these directly measurable short-term metrics often overlook the long-term value of a recommendation \cite{mazoure2021improving}. By focusing on immediate rewards, they may rank content based on short-term engagement metrics while neglecting the entire sequence of user interactions that involve delayed responses. Such approaches can result in suboptimal outcomes, such as promoting clickbait content that compromises long-term revenue and user engagement.\\
+
+% Why can't deep learning optimize effectively for long term ? 
+While in principle a sufficiently expressive supervised model could optimize long-term engagement given appropriately constructed labels, SL is structurally insufficient for long-horizon recommendation for two key reasons.
+
+First, SL ignores policy-induced distribution shifts. It optimizes conditional expectations of immediate outcomes (e.g., $\mathbb{E}[r_t \mid s_t, a_t]$) using data generated under a historical policy. This implicitly assumes that the training distribution is fixed. In interactive systems, however, the recommendation policy shapes user behavior, and user behavior in turn determines future training data. This violates the stationary assumptions underlying standard supervised optimization. 
+
+Second, SL lacks a principled mechanism for reasoning about counterfactual trajectories.  Supervised learning relies exclusively on realized trajectories. Because user journeys are highly personalized and path-dependent, most possible interaction sequences are never observed in logged data. Long-term outcomes are therefore not fixed labels, but functions of the policy that generates future trajectories.
+
+RL provides a framework in recommendation systems to solve the two problems above. First, RL addresses policy-induced distribution shifts by explicitly modeling recommendation as a sequential decision process in which actions influence future states. 
+
+Second, RL enables evaluation and improvement of policies over entire trajectories. By estimating long-horizon returns under the dynamics induced by a candidate policy, RL allows the system to reason about delayed effects and optimize objectives that depend on sequential interactions.
+Rather than replacing supervised learning, RL can be viewed as embedding supervised prediction within a sequential control framework. Deep models remain central for representation learning and reward estimation, while RL augments them with the machinery required to optimize policy-dependent, long-term objectives.
+
 
 	% 4.	How does Reinforcement Learning (RL) offer a promising solution to these challenges?
 
-To address the limitations of short-term optimization, many large-scale platforms have explored reinforcement learning (RL) as a framework for long-horizon decision making \cite{afsar2022reinforcement}. RL models recommendation as a sequential process in which system actions influence both immediate outcomes and future user behavior. This perspective allows platforms to explicitly reason about trade-offs between short-term monetization and long-term user value.\\
-
-In the context of recommendation systems, rewards can be defined to capture both user engagement and revenue objectives. Engagement rewards might include metrics such as time spent on the platform, content views, clicks, saves, shares, or likes \cite{wang2022surrogate}. Revenue rewards can be tied to ad-related metrics like ad impressions, ad clicks, conversions, or purchases resulting from ad exposure. \\
-
+To address the limitations of short-term optimization, many large-scale platforms have explored reinforcement learning (RL) as a framework for long-horizon decision making \cite{afsar2022reinforcement}. RL models recommendation as a sequential process in which system actions influence both immediate outcomes and future user behavior. This perspective allows platforms to explicitly reason about trade-offs between short-term monetization and long-term user value. Engagement rewards might include metrics such as time spent on the platform, content views, clicks, saves, shares, or likes \cite{wang2022surrogate}. Revenue rewards can be tied to ad-related metrics like ad impressions, ad clicks, conversions, or purchases resulting from ad exposure. 
 These different rewards are often combined into a single utility function that reflects the platform's overall objectives \cite{zhao2020jointly} \cite{zou2019reinforcement} \cite{xu2023optimizing}.\\
 
 A common formulation expresses the reward at time $t$ as a weighted combination of engagement and revenue components:
@@ -90,7 +100,7 @@ $$ where the weights reflect the platform's strategic trade-offs between user ex
 
 
 % What specific challenges are encountered when implementing RL in large-scale recommendation systems?
-Despite the promising theoretical framework that RL offers for optimizing long-term value in recommendation systems, implementing RL in real-world, large-scale platforms remains complex \cite{dulac2021challenges}. First, in the context of recommendation systems, the state space, which reflects the current context of the user and the environment, and the action space, which captures how the recommender system can be tuned, are both essentially infinite \cite{zhu2021overview}. This vastness makes learning and optimization computationally intensive and difficult to discretize into individual actions and states, a critical requirement for policy learning \cite{afsar2022reinforcement} . \\ 
+Despite the promising theoretical framework that RL offers for optimizing long-term value in recommendation systems, implementing RL in real-world, large-scale platforms remains complex \cite{dulac2021challenges}. First, the state space, which reflects the current context of the user and the environment, and the action space, which captures how the recommender system can be tuned, are both essentially infinite \cite{zhu2021overview}. This vastness makes learning and optimization computationally intensive and difficult to discretize into individual actions and states, a critical requirement for policy learning \cite{afsar2022reinforcement} . \\ 
 
 Second, designing appropriate reward functions is critical, as poorly chosen reward functions can lead to unintended system behaviors that degrade user experience or negatively affect business revenue \cite{everitt2021reward}. For example, a reward function that overly prioritizes click-based metrics may drive the system to promote clickbait content, boosting short-term engagement but eroding user trust and satisfaction over time \cite{wu2017returning}. Similarly, a reward function too heavily skewed toward revenue metrics could result in excessive ad load, disrupting the user experience and leading to churn. Striking the right balance in reward function design is essential to achieve both user engagement and monetization objectives without compromising the platform’s long-term goals.\\
 
@@ -109,9 +119,7 @@ The paper begins with a historical overview of ad selection and ranking systems,
 
 The remainder of the paper is organized according to this taxonomy. We first describe the evolution of monetization-aware ranking systems, and then survey prior work by examining how different approaches define the action space, state representation, reward structure, and policy learning mechanisms.
 
-
 	% 8.	How will this paper help practitioners and researchers navigate the challenges of implementing RL in recommendation systems?
-
 
 	% 13.	What is the structure of the paper, and what can readers expect in the subsequent sections?
 
